# movie-recommender

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  gen_logo.py  pyproject.toml
docker/: docker-compose.yml
docs/superpowers/notes/: 2026-04-26-llm-deployment.md
docs/superpowers/plans/: 2026-04-26-llm-reranked-daily-recommendations.md
docs/superpowers/specs/: 2026-04-26-llm-reranked-daily-recommendations-design.md
src/movie_recommender/: __main__.py  app.py
src/movie_recommender/api/v1/: pipeline.py  sync.py
src/movie_recommender/cli/: main.py
src/movie_recommender/core/: config.py  database.py  storage.py
src/movie_recommender/filters/: pipeline.py
src/movie_recommender/ingest/: cub_client.py  lampa_parser.py  tmdb_client.py
src/movie_recommender/models/: movie.py  recommendation.py  torrent.py  user_profile.py  watch_history.py
src/movie_recommender/pipeline/: runner.py
src/movie_recommender/publishers/: bot_commands.py  feedback.py  rezka_reviews.py  telegram.py  trailer_finder.py
src/movie_recommender/recommender/: content_based.py  llm_reranker.py  profile_builder.py
src/movie_recommender/search/: aggregator.py  base.py  jackett.py
src/movie_recommender/static/: lampa_plugin.js
tests/: conftest.py  test_llm_reranker.py  test_pipeline_with_llm.py  test_published_ttl.py  test_runner_progress.py  test_tmdb_client_extra.py
